[tool.poetry]
name = "py-dnd"
version = "0.1.0"
description = "Python FastAPI application for DnD"
authors = ["Ian Kirkpatrick <https://github.com/humoroushorse>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
fastapi = "^0.112.2"
loguru = "^0.7.2"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
uvicorn = "^0.30.6"
pandas = "^2.2.2"
aiohttp = "^3.10.5"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.9"
coverage = "^7.6.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings = {extras = ["python"], version = "^0.26.0"}
pylint = "^3.2.7"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
