[tool.poetry]
name = "dnd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dnd", from = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
alembic = "^1.8.1"
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.41"
pydantic = "^1.10.2"
psycopg2-binary = "^2.9.3"
python-multipart = "^0.0.5"
requests = "^2.28.1"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.3"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
