[tool.poetry]
name = "dnd"
version = "0.1.0"
description = ""
authors = ["Ian Kirkpatrick <https://github.com/humoroushorse>"]
readme = "README.md"
packages = [{include = "dnd", from = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
alembic = "^1.8.1"
aiosqlite = "^0.17.0"
SQLAlchemy = "^2.0.25"
pydantic = "^1.10.2"
python-multipart = "^0.0.5"
requests = "^2.31.0"
python-dotenv = "^0.21.0"
loguru = "^0.7.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pylint = "^2.15.3"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
mkdocs = "1.5.3"
mkdocstrings = {version = "0.24.0", extras = ["python"]}
mkdocs-material = "9.5.11"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
