[tool.poetry]
name = "dnd"
version = "0.1.0"
description = ""
authors = ["Ian Kirkpatrick <https://github.com/humoroushorse>"]
readme = "README.md"
packages = [{include = "dnd", from = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.1"
uvicorn = "0.29.0"
alembic = "1.13.1"
aiosqlite = "0.20.0"
SQLAlchemy = "2.0.29"
pydantic = "2.7.0"
python-multipart = "0.0.9"
requests = "2.31.0"
python-dotenv = "1.0.1"
loguru = "0.7.2"
psycopg2-binary = "^2.9.9"
prometheus-fastapi-instrumentator = "^7.0.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
pylint = "3.1.0"
coverage = "7.4.4"
pytest-cov = "5.0.0"
mkdocs = "1.5.3"
mkdocstrings = {version = "0.24.3", extras = ["python"]}
mkdocs-material = "9.5.18"
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
